--- a/style.css
+++ b/style.css
@@ -263,7 +263,7 @@ nav .fa-bars {
   display: none;
 }
 /*--------For Small Screens ----------*/
-@media only screen {
+@media only screen and (max-width:700px){
   .logo {
     position: fixed;
     top: 4%;
